--- a/public/assets/bootstrap/css/custom.css
+++ b/public/assets/bootstrap/css/custom.css
@@ -39,7 +39,7 @@ body {
 
 /* Carousel base class */
 .carousel {
-    height: 500px;
+    max-height: 500px;
     margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -49,7 +49,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-    height: 500px;
+    max-height: 500px;
     background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -57,7 +57,34 @@ body {
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 500px;
+    max-height: 500px;
+}
+
+.carousel-control {
+    text-shadow: none;
+    opacity: 1;
+    filter: alpha(opacity=100)
+}
+.carousel-control:hover, .carousel-control:focus {
+    opacity: 1;
+    filter: alpha(opacity=100)
+}
+
+.carousel-control.left {
+    background-image: -webkit-gradient(linear, 0 top, 100% top, from(rgba(255,255,255,0.5)), to(rgba(255,255,255,0.0001)));
+    background-image: -webkit-linear-gradient(left, color-stop(rgba(255,255,255,0.5) 0), color-stop(rgba(255,255,255,0.0001) 100%));
+    background-image: -moz-linear-gradient(left, rgba(255,255,0,0.5) 0, rgba(255,255,255,0.0001) 100%);
+    background-image: linear-gradient(to right, rgba(255,255,255,0.5) 0, rgba(255,255,255,0.0001) 100%);
+    background-repeat: repeat-x;
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1)
+}
+.carousel-control.right {
+    background-image: -webkit-gradient(linear, 0 top, 100% top, from(rgba(255,255,255,0.0001)), to(rgba(255,255,255,0.5)));
+    background-image: -webkit-linear-gradient(left, color-stop(rgba(255,255,255,0.0001) 0), color-stop(rgba(255,255,255,0.5) 100%));
+    background-image: -moz-linear-gradient(left, rgba(255,255,255,0.0001) 0, rgba(255,255,255,0.5) 100%);
+    background-image: linear-gradient(to right, rgba(255,255,255,0.0001) 0, rgba(255,255,255,0.5) 100%);
+    background-repeat: repeat-x;
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1)
 }
 
 
@@ -133,7 +160,7 @@ body {
     }
 }
 
-/* PAGE PADDING */
-.page_padding {
-    margin-top: 60px;
+.intro-header {
+    min-height: 250px;
+    background-size: cover, cover;
 }
